--- a/CGJ_Project/CGJ_Project.vcxproj.filters
+++ b/CGJ_Project/CGJ_Project.vcxproj.filters
@@ -30,7 +30,7 @@
     <ClCompile Include="..\mgl\mglApp.cpp">
       <Filter>mgl</Filter>
     </ClCompile>
-    <ClCompile Include="hello-2d-world.cpp">
+    <ClCompile Include="A2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
