--- a/CGJ_Project/CGJ_Project.vcxproj
+++ b/CGJ_Project/CGJ_Project.vcxproj
@@ -145,6 +145,7 @@ xcopy /y $(SolutionDir)libraries\assimp\bin\x64\assimp-vc143-mt.dll $(OutDir)</C
     <ClCompile Include="..\mgl\mglShader.cpp" />
     <ClCompile Include="mesh-loader.cpp" />
     <ClCompile Include="objects.cpp" />
+    <ClCompile Include="scene-graph.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="clip-fs.glsl" />
@@ -164,6 +165,7 @@ xcopy /y $(SolutionDir)libraries\assimp\bin\x64\assimp-vc143-mt.dll $(OutDir)</C
     <ClInclude Include="..\mgl\mglScenegraph.hpp" />
     <ClInclude Include="..\mgl\mglShader.hpp" />
     <ClInclude Include="objects.hpp" />
+    <ClInclude Include="scene-graph.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
